# cadiax

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASHBOARD_PR_DESCRIPTION.md  DEPLOYMENT_CHECKLIST.md  FOUNDATIONAL_CAPABILITIES.md  FOUNDATIONAL_SKILL_ROADMAP.md  LICENSE  MERGE_STRATEGY_SUMMARY.md  OPERATIONS.md  README.md  RELEASE_CONFIDENCE_CLOSURE.md  RELEASE_CONFIDENCE_WORKSHEET.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SKILL_FORMAT.md  SUPPORT.md  TARGET_ARCHITECTURE_V2.md  VALIDATION_MATRIX.md  autonomous_ai_system_spec_extended.md  install.bat  install.ps1  install.sh  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/architecture/: ARCHITECTURE.md  ROADMAP.md  TARGET_ARCHITECTURE_V2.md  TUI_BACKEND_CONTROL_SURFACE.md  TUI_CLI_COVERAGE_MATRIX.md  TUI_FULL_MIGRATION_PLAN.md  TUI_OPERATOR_TODO.md  TUI_VALIDATION_AND_TEST_PLAN.md  TUI_WAVE_NEXT.md
docs/operations/: INSTALL.md  MONITORING_DASHBOARD.md  OPERATIONS.md
docs/release/: DASHBOARD_PR_DESCRIPTION.md  DEPLOYMENT_CHECKLIST.md  MERGE_STRATEGY_SUMMARY.md  RELEASE_CONFIDENCE_CLOSURE.md  RELEASE_CONFIDENCE_WORKSHEET.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.1.2.md  RELEASE_NOTES_v1.1.3.md  RELEASE_NOTES_v1.1.4.md  RELEASE_NOTES_v1.1.5.md  RELEASE_NOTES_v1.1.6.md  TUI_PRODUCTION_RELEASE_PLAN.md  VALIDATION_MATRIX.md
docs/skills/: CAPABILITY_ORCHESTRATION_MAP.md  CHANGE_REQUEST_FOUNDATIONAL_SKILLS.md  FOUNDATIONAL_CAPABILITIES.md  SKILL_FORMAT.md  (+5 more)
monitoring-dashboard/: index.html  package-lock.json  package.json  tsconfig.server.json
skills/: __init__.py  ai-chat.md  calculator.md  echo.md  help.md
tests/: test_autonomous_stability.py  test_public_package.py  test_setup_wizard.py  test_tui_backend.py
(+213 files in other folders)
